--- a/views/channel.html
+++ b/views/channel.html
@@ -1,14 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Channel Page</title>
+    <title>Exemple de Routage</title>
 </head>
-
 <body>
-    <h2>Welcome to the channel 🙋</h2>
+    <h2>Canaux de Discussion</h2>
+    <ul>
+        <li><a href="#">Général</a></li>
+        <li><a href="#">Tech</a></li>
+        <li><a href="#">Sports</a></li>
+    </ul>
 </body>
-
 </html>
