fix: correct url

--- a/views/index.html
+++ b/views/index.html
@@ -87,8 +87,8 @@
     <p>Bienvenue sur la page d'accueil de notre application de chat.</p>
     <h2>Canaux de Discussion</h2>
     <ul>
-      <li><a href="./login.html">Se connecter</a></li>
-      <li><a href="./chat.html">Chat general</a></li>
+      <li><a href="/login">Se connecter</a></li>
+      <li><a href="/chat">Chat general</a></li>
     </ul>
   </div>
 </body>
