--- a/views/channel.html
+++ b/views/channel.html
@@ -1,9 +1,26 @@
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <title>Exemple de Routage</title>
 </head>
+
 <body>
+    <header>
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="btn btn-chat" href="/chat" role="button">Chat</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="btn btn-channel" href="/channel" role="button">Channel</a>
+                    </li>
+                </ul>
+                <a href="/auth/logout"><button class="btn btn-outline-danger">Logout</button></a>
+            </div>
+        </nav>
+    </header>
     <h2>Canaux de Discussion</h2>
     <ul>
         <li><a href="#">Général</a></li>
@@ -11,4 +28,5 @@
         <li><a href="#">Sports</a></li>
     </ul>
 </body>
+
 </html>
