--- a/views/chat.html
+++ b/views/chat.html
@@ -1,36 +1,60 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <title>Socket.IO chat</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link href="styles.css" rel="stylesheet">
-  </head>
-  <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="btn btn-chat" href="http://localhost:8080/chat" role="button">Chat</a>
-          </li>
-          <li class="nav-item">
-            <a class="btn btn-login" href="http://localhost:8080/login" role="button">Login</a>
-          </li>
-          <li class="nav-item">
-            <a class="btn btn-channel" href="http://localhost:8080/channel" role="button">Channel</a>
-          </li>
-        </ul>
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </div>
-    </nav>
+</head>
+
+<body>
+    <header>
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="btn btn-chat" href="/chat" role="button">Chat</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="btn btn-channel" href="/channel" role="button">Channel</a>
+                    </li>
+                </ul>
+                <a href="/auth/logout"><button class="btn btn-outline-danger">Logout</button></a>
+            </div>
+        </nav>
+    </header>
     <ul id="messages"></ul>
-    <form id="form" action="">
-      <input id="input" autocomplete="off" /><button>Send</button>
+    <form id="form">
+        <div class="w-100 position-absolute bottom-0 start-0 d-flex">
+
+            <input id="input" class="w-75 py-2" autocomplete="off" />
+            <input class="w-25 py-2" type="submit" id="btn" value="Send">
+
+        </div>
     </form>
     <script src="/socket.io/socket.io.js"></script>
+    <script>
+        const socket = io();
+
+        const form = document.getElementById('form');
+        const input = document.getElementById('input');
+
+        form.addEventListener('submit', (e) => {
+            e.preventDefault();
+            if (input.value) {
+                socket.emit('chat message', input.value);
+                input.value = '';
+            }
+        });
+        socket.on('chat message', (msg) => {
+            const item = document.createElement('li');
+            item.textContent = msg;
+            document.getElementById('messages').appendChild(item);
+            window.scrollTo(0, document.body.scrollHeight);
+        });
+    </script>
     <script src="scripts.js"></script>
-  </body>
+</body>
+
 </html>
-
-
-   
