--- a/views/index.html
+++ b/views/index.html
@@ -82,6 +82,21 @@
 </head>
 
 <body>
+  <header>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="btn btn-chat" href="/chat" role="button">Chat</a>
+          </li>
+          <li class="nav-item">
+            <a class="btn btn-channel" href="/channel" role="button">Channel</a>
+          </li>
+        </ul>
+        <a href="/auth/logout"><button class="btn btn-outline-danger">Logout</button></a>
+      </div>
+    </nav>
+  </header>
   <div class="container">
     <h1>Page d'Accueil</h1>
     <p>Bienvenue sur la page d'accueil de notre application de chat.</p>
