--- a/views/login.html
+++ b/views/login.html
@@ -1,54 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-    <meta charset="UTF-8">
-    <link href="static/css/login.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <title>Log in</title>
+<meta charset="UTF-8">
+<link href="static/css/login.css" rel="stylesheet">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+  integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+<title>Log in</title>
 
-  </head>
+</head>
+
 <body>
-  <nav class="navbar navbar-expand-lg bg-body-tertiary">
-    
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="btn btn-chat" href="/register" role="button">Register</a>
-    
-        </li>
-        <li class="nav-item">
-          <a class="btn btn-login" href="/login" role="button">Login</a>
-          
-        </li>
-        <li class="nav-item">
-          <a class="btn btn-channel" href="/channel" role="button">Channel</a>
-          
-        </li>
-      </ul>
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      
-    </div>
-    </nav>  <img src="chat_logo_design-removebg-preview.png" alt="Arrière-plan" id="background" width="200" height="200">
-
-    <div class="login-box">
-      <h2>Login</h2>
-      <form action="/login" method="post">
-          <div class="user-box">
-            <input type="text" name="username" id="username" required>
-            <label>Username</label>
-          </div>
-          <div class="user-box">
-            <input type=" password" name="password" id="password" required>
-            <label>Password</label>
-          </div>
-          <a href="#">
-            <span></span>
-            <span></span>
-            <span></span>
-            <span></span>
-            <input type="submit" class="loginbtn" value="Sign-in">
-        </a>
-</form>
-</div>
+  <header>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="btn btn-chat" href="/chat" role="button">Chat</a>
+          </li>
+          <li class="nav-item">
+            <a class="btn btn-channel" href="/channel" role="button">Channel</a>
+          </li>
+        </ul>
+        <a href="/auth/logout"><button class="btn btn-outline-danger">Logout</button></a>
+      </div>
+    </nav>
+  </header>
+  <div class="login-box">
+    <h2>Login</h2>
+    <form action="/login" method="post">
+      <div class="user-box">
+        <input type="text" name="username" id="username" required>
+        <label>Username</label>
+      </div>
+      <div class="user-box">
+        <input type=" password" name="password" id="password" required>
+        <label>Password</label>
+      </div>
+    </form>
+  </div>
 </body>
+
 </html>
