--- a/views/message.html
+++ b/views/message.html
@@ -1,13 +1,30 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <title>Exemple de Routage</title>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/your-client-script.js"></script>
-    
+
 </head>
+
 <body>
+    <header>
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="btn btn-chat" href="/chat" role="button">Chat</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="btn btn-channel" href="/channel" role="button">Channel</a>
+                    </li>
+                </ul>
+                <a href="/auth/logout"><button class="btn btn-outline-danger">Logout</button></a>
+            </div>
+        </nav>
+    </header>
     <h1>Envoyer un Message</h1>
     <form id="message-form" action="/sendMessage" method="post">
         <label for="message">Message :</label>
@@ -19,4 +36,5 @@
         <!-- Les messages seront ajoutés ici dynamiquement -->
     </ul>
 </body>
+
 </html>
