--- a/views/register.html
+++ b/views/register.html
@@ -1,65 +1,87 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <link href="register.css" rel="stylesheet">
-    <link href="static/css/register.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <title>Sign-in</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="register.css" rel="stylesheet" />
+  <link href="static/css/register.css" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+  <title>Sign-in</title>
 </head>
+
 <body>
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="btn btn-chat" href="http://localhost:8080/register" role="button">Register</a>
-    
+          <a class="btn btn-chat" href="/register" role="button">Register</a>
         </li>
         <li class="nav-item">
-          <a class="btn btn-login" href="http://localhost:8080/login" role="button">Login</a>
-          
+          <a class="btn btn-login" href="/login" role="button">Login</a>
         </li>
         <li class="nav-item">
-          <a class="btn btn-channel" href="http://localhost:8080/channel" role="button">Channel</a>
-          
+          <a class="btn btn-channel" href="/channel" role="button">Channel</a>
         </li>
       </ul>
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      
+      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
+      <button class="btn btn-outline-success" type="submit">Search</button>
     </div>
-    </nav>  <img src="chat_logo_design-removebg-preview.png" alt="Arrière-plan" id="background" width="100" height="100">
+  </nav>
+  <div class="login-box">
+    <h2>Sign-up</h2>
+    <form id="registrationForm">
+      <div class="user-box">
+        <input type="text" name="username" id="username" required />
+        <label>Username</label>
+      </div>
+      <div class="user-box">
+        <input type="email" name="email" id="email" required />
+        <label>Email</label>
+      </div>
+      <div class="user-box">
+        <input type="password" name="password" id="password" required />
+        <label>Password</label>
+      </div>
+      <label id="alert-message"></label>
+      <h1><a href="/login">already sign up ?</a></h1>
+      <a href="#">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <input id="registerButton" type="submit" class="loginbtn" value="Validate" />
+      </a>
+    </form>
+  </div>
 
-    <div class="login-box">
-        <h2>Sign-up</h2>
-        <form action="/register" method="post">
-            <div class="user-box">
-              <input type="text" name="username" id="username" required>
-              <label>Username</label>
-            </div>
-            <div class="user-box">
-              <input type=" email" name="email" id="email" required>
-              <label>Email</label>
-            </div>
-            <div class="user-box">
-              <input type=" tel" name="phone" id="phone" required>
-              <label>Phone</label>
-            </div>
-            
-            <div class="user-box">
-                <input type="password" name="password" id="password" required>
-                <label>Password</label>
-            </div>
-            <h1><a href="./login.html">already sign up ?</a></h1>
-              <a href="#">
-                <span></span>
-                <span></span>
-                <span></span>
-                <span></span>
-                <input type="submit" class="loginbtn" value="Validate">
-            </a>
-        </form>
-    </div>
-   
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <script>
+    document.getElementById('registrationForm').addEventListener('submit', async function (event) {
+      event.preventDefault();
+      const data = {
+        "username": document.getElementById("username").value,
+        "email": document.getElementById("email").value,
+        "password": document.getElementById("password").value
+      }
+      console.log(data);
+      axios.post('/users/register', data)
+        .then(function (response) {
+          document.getElementById("alert-message").innerHTML = `Registration successful!\n you will be redirected to login in 3 secondes...`;
+          setTimeout(function () {
+            let toLoginPage = '/login';
+            if (toLoginPage) {
+              window.location.href = toLoginPage;
+            }
+          }, 3000); // 3 sec
+        })
+        .catch(function (error) {
+          document.getElementById("alert-message").innerHTML = error.response.data.errorMessage;
+          console.log(error.response.data);
+        })
+    });
+  </script>
 </body>
+
 </html>
