feat: add styles and show password

--- a/public/static/css/login.css
+++ b/public/static/css/login.css
@@ -6,6 +6,9 @@ body {
     padding: 0;
     font-family: sans-serif;
     background-image: url(/static/img/chat_logo_design-removebg-preview.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size:auto;
 }
 
 
@@ -16,10 +19,7 @@ body {
     width: 400px;
     padding: 40px;
     transform: translate(-50%, -50%);
-    background: rgba(0, 0, 0, .5);
-    box-sizing: border-box;
-    box-shadow: 0 15px 25px rgba(0, 0, 0, .6);
-    border-radius: 10px;
+  
 }
 
 .login-box h2 {
