--- a/views/chat.html
+++ b/views/chat.html
@@ -24,7 +24,7 @@
             </div>
         </nav>
     </header>
-    <ul id="messages"></ul>
+    <ul id="messages" class="p-3 list-unstyled"></ul>
     <form id="form">
         <div class="w-100 position-absolute bottom-0 start-0 d-flex">
 
