--- a/views/login.html
+++ b/views/login.html
@@ -4,76 +4,52 @@
 <link href="static/css/login.css" rel="stylesheet">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
   integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 <title>Log in</title>
 
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg bg-body-tertiary">
-
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="btn btn-chat" href="/register" role="button">Register</a>
-
-        </li>
-        <li class="nav-item">
-          <a class="btn btn-login" href="/login" role="button">Login</a>
-
-        </li>
-        <li class="nav-item">
-          <a class="btn btn-channel" href="/channel" role="button">Channel</a>
-
-        </li>
-      </ul>
-      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success" type="submit">Search</button>
-
-    </div>
-  </nav>
-
-  <div class="login-box">
+  <div class="login-box bg-primary border-radius">
     <h2>Login</h2>
     <form id="loginForm">
-      <div class="user-box">
-        <input type="text" name="username" id="username" required>
-        <label>Username</label>
+      <div class="input-group mb-3">
+        <span class="input-group-text" id="basic-addon1">@</span>
+        <input id="username" type="text" class="form-control" placeholder="Username" aria-label="Username" required>
       </div>
-      <div class="user-box">
-        <input type="password" name="password" id="password" required>
-        <label>Password</label>
+      <div class="input-group mb-3">
+        <span class="input-group-text" id="basic-addon1"><i class="bi bi-shield-lock"></i></span>
+        <input id="password" type="password" class="form-control" placeholder="Password" aria-label="Password" required>
+        <span class="input-group-text" id="basic-addon1"><i id="eye" class="bi bi-eye-slash-fill"
+            onclick="showPassword()"></i></span>
       </div>
-      <label id="alert-message"></label>
+      <label id="alert-message" class="text-white"></label>
       <h1><a href="/register">no account ?</a></h1>
-      <a href="#">
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <input type="submit" class="loginbtn" value="Sign-in">
-      </a>
+      <input type="submit" class="btn btn-light mb-3" value="Sign-in">
     </form>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script>
-    
+
     document.getElementById('loginForm').addEventListener('submit', async function (event) {
       event.preventDefault();
       const data = {
-      "username": document.getElementById("username").value,
-      "password": document.getElementById("password").value
-    }
-    console.log(data);
+        "username": document.getElementById("username").value,
+        "password": document.getElementById("password").value
+      }
+      console.log(data);
       axios.post('/auth/login', data)
-      .then(function (response){
-        document.getElementById("alert-message").innerHTML = response.data.message;
-        console.log(response);
-      })
-      .catch(function (error){
-        document.getElementById("alert-message").innerHTML = "Incorrect username or password";
-        console.log(error);
-      })
+        .then(function (response) {
+          document.getElementById("alert-message").innerHTML = response.data.message;
+          console.log(response);
+        })
+        .catch(function (error) {
+          document.getElementById("alert-message").innerHTML = "Incorrect username or password";
+          console.log(error);
+        })
     });
   </script>
+  <script src="static/js/showPassword.js"></script>
 </body>
+
 </html>
