--- a/views/register.html
+++ b/views/register.html
@@ -8,27 +8,11 @@
   <link href="static/css/register.css" rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <title>Sign-in</title>
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="btn btn-chat" href="/register" role="button">Register</a>
-        </li>
-        <li class="nav-item">
-          <a class="btn btn-login" href="/login" role="button">Login</a>
-        </li>
-        <li class="nav-item">
-          <a class="btn btn-channel" href="/channel" role="button">Channel</a>
-        </li>
-      </ul>
-      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
-      <button class="btn btn-outline-success" type="submit">Search</button>
-    </div>
-  </nav>
   <div class="login-box">
     <h2>Sign-up</h2>
     <form id="registrationForm">
@@ -43,8 +27,13 @@
       <div class="user-box">
         <input type="password" name="password" id="password" required />
         <label>Password</label>
+
       </div>
-      <label id="alert-message"></label>
+      <div class="text-white fs-5">
+        <i id="eye" class="bi bi-eye-slash-fill" onclick="showPassword()"></i>
+        <label>Show password</label>
+      </div>
+      <label id="alert-message" class="text-white fs-5"></label>
       <h1><a href="/login">already sign up ?</a></h1>
       <a href="#">
         <span></span>
@@ -82,6 +71,8 @@
         })
     });
   </script>
+  <script src="static/js/showPassword.js"></script>
+
 </body>
 
 </html>
