--- a/views/profil.html
+++ b/views/profil.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta viewport="width=device-width, initial-scale=1.0">
     <title>Profil Utilisateur</title>
     <script src="static/js/photo.js"></script>
-    <link rel="stylesheet" href=".static/css/profil.css">
+    <link rel="stylesheet" href="static/css/profil.css">
 </head>
+
 <body>
     <div class="profil">
         <header class="header">
@@ -15,8 +17,9 @@
         <div class="profile-card">
             <div class="profil-bitmoji-wrapper" onclick="document.getElementById('profileImageInput').click();">
                 <img src="" alt="Avatar de l'utilisateur" class="profile-bitmoji">
-                <input type="file" id="profileImageInput" style="display: none;" onchange="previewImage();" accept="image/*">
-            </div>            
+                <input type="file" id="profileImageInput" style="display: none;" onchange="previewImage();"
+                    accept="image/*">
+            </div>
             <div class="profile-info">
                 <h2>Nom d'Utilisateur</h2>
                 <p class="status">Statut : <span>En ligne</span></p>
@@ -35,4 +38,5 @@
     <script src="public/static/js/photo.js"></script>
 </body>
 </body>
+
 </html>
